log
Thu, Mar 27, 2025  5:40:03 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:49:39 PM: 
 list.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
bb2aa2e
Thu, Mar 27, 2025  5:50:35 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d37b81c
Thu, Mar 27, 2025  5:51:58 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6dfcefb
Thu, Mar 27, 2025  5:53:30 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
66bd694
Thu, Mar 27, 2025  5:55:35 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
39b361b
Thu, Mar 27, 2025  5:55:45 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
00b1cda
Thu, Mar 27, 2025  5:58:01 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d4ccd1d
Thu, Mar 27, 2025  5:58:29 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
007f481
Thu, Mar 27, 2025  5:59:51 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
86a79d8
Thu, Mar 27, 2025  6:03:07 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
b231854
Thu, Mar 27, 2025  6:06:20 PM: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'lastList':
list.c:59:32: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     while(list-> current ->next=! NULL){
                                ^
list.c:59:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     while(list-> current ->next=! NULL){
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
08bd092
Thu, Mar 27, 2025  6:07:42 PM: 
 list.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
test.c: In function 'lastList':
test.c:448:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
 }
 ^
test.c:468:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:448:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
list.c:95:6: error: 'cleanList' defined but not used [-Werror=unused-function]
 void cleanList(List * list) {
      ^~~~~~~~~
list.c:86:8: error: 'popBack' defined but not used [-Werror=unused-function]
 void * popBack(List * list) {
        ^~~~~~~
list.c:73:6: error: 'pushBack' defined but not used [-Werror=unused-function]
 void pushBack(List * list, void * data) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f9d64f0
Thu, Mar 27, 2025  6:10:25 PM: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 25/70
6ac51e8
